--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -184,7 +184,7 @@
       "terrestrial-existing-conservation": "Existing terrestrial conservation coverage",
       "not-assessed": "Not assessed",
       "data-disclaimer": "Data disclaimer",
-      "related-groups": "Related Groups",
+      "claimed-by": "Claimed By",
       "related-countries": "Related Countries",
       "territory-of": "Territory of",
       "also-claimed-by": "also claimed by"
