--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -262,7 +262,8 @@
       "next-page": "Next page",
       "page-number": "<a>Page</a> {number}",
       "collapse-sub-rows": "Collapse sub-rows",
-      "expand-sub-rows": "Expand sub-rows"
+      "expand-sub-rows": "Expand sub-rows",
+      "eez-multi-claim": "EEZ claimed by multiple countries"
     }
   },
   "components": {
