--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -266,7 +266,9 @@
       "page-number": "<a>Page</a> {number}",
       "collapse-sub-rows": "Collapse sub-rows",
       "expand-sub-rows": "Expand sub-rows",
-      "eez-multi-claim": "EEZ claimed by multiple countries"
+      "eez-multi-claim": "EEZ claimed by multiple countries",
+      "add-to-custom-region": "Add to Custom Region",
+      "remove-from-custom-region": "Remove from Custom Region"
     }
   },
   "components": {
