remove custom regions atom and excluively use querystate

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -185,7 +185,7 @@
       "not-assessed": "Not assessed",
       "data-disclaimer": "Data disclaimer",
       "claimed-by": "Claimed By",
-      "related-countries": "Related Countries",
+      "includes": "Includes",
       "territory-of": "Territory of",
       "also-claimed-by": "also claimed by",
       "country": "Country",
