testing pre-commit hook update

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -140,6 +140,7 @@
       "all": "All",
       "countries": "Countries",
       "regions-and-high-seas": "Regions & High Seas",
+      "custom-region": "Custom Region",
       "no-result": "No result",
       "view-all-countries": "View all countries",
       "hide-some-countries": "Hide some countries",
