--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -197,7 +197,8 @@
       "close-custom-region": "Close custom region",
       "empty-custom-region": "Add countries to your Custom Region by selecting them on the map and clicking the <addIcon></addIcon> icon, or by clicking on <searchIcon></searchIcon> Change Location and choosing from the list of countries in the Custom Region tab.",
       "add-country-custom-region": "Add Countries to Your Custom Region to See Stats",
-      "clear-all": "Clear All"
+      "clear-all": "Clear All",
+      "no-data-for": "No data for"
     },
     "map-sidebar-layers-panel": {
       "map-layers": "Map Layers",
