--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -198,7 +198,9 @@
       "empty-custom-region": "Add countries to your Custom Region by selecting them on the map and clicking the <addIcon></addIcon> icon, or by clicking on <searchIcon></searchIcon> Change Location and choosing from the list of countries in the Custom Region tab.",
       "add-country-custom-region": "Add Countries to Your Custom Region to See Stats",
       "clear-all": "Clear All",
-      "no-data-for": "No data for"
+      "no-data-for": "No data for",
+      "overlapping-eez-explainer": "The following countries in your Custom Region have some overlapping EEZ boundaries with at least one other country. This could mean that some statistics are double counted:",
+      "overlapping-eez": "Shared EEZs"
     },
     "map-sidebar-layers-panel": {
       "map-layers": "Map Layers",
