--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -200,7 +200,7 @@
       "clear-all": "Clear All",
       "no-data-for": "No data for",
       "overlapping-eez-explainer": "The following countries in your Custom Region have some overlapping EEZ boundaries with at least one other country. This could mean that some statistics are double counted:",
-      "overlapping-eez": "Shared EEZs"
+      "overlapping-eez": "Overlapping EEZs"
     },
     "map-sidebar-layers-panel": {
       "map-layers": "Map Layers",
@@ -273,7 +273,8 @@
       "expand-sub-rows": "Expand sub-rows",
       "eez-multi-claim": "EEZ claimed by multiple countries",
       "add-to-custom-region": "Add to Custom Region",
-      "remove-from-custom-region": "Remove from Custom Region"
+      "remove-from-custom-region": "Remove from Custom Region",
+      "may-contain-overlapping-eez": "May contain overlapping EEZ"
     }
   },
   "components": {
