--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -274,7 +274,7 @@
       "eez-multi-claim": "EEZ claimed by multiple countries",
       "add-to-custom-region": "Add to Custom Region",
       "remove-from-custom-region": "Remove from Custom Region",
-      "may-contain-overlapping-eez": "May contain overlapping EEZ"
+      "may-contain-overlapping-eez": "May overlap with other EEZs"
     }
   },
   "components": {
