--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -195,6 +195,7 @@
       "worldwide": "Worldwide",
       "create-custom-region": "Create a custom region",
       "close-custom-region": "Close custom region",
+      "view-custom-region": "View custom region",
       "empty-custom-region": "Add countries to your Custom Region by selecting them on the map and clicking the <addIcon></addIcon> icon, or by clicking on <searchIcon></searchIcon> Change Location and choosing from the list of countries in the Custom Region tab.",
       "add-country-custom-region": "Add Countries to Your Custom Region to See Stats",
       "clear-all": "Clear All",
