--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -185,7 +185,7 @@
       "terrestrial-existing-conservation": "Existing terrestrial conservation coverage",
       "not-assessed": "Not assessed",
       "data-disclaimer": "Data disclaimer",
-      "claimed-by": "Claimed By",
+      "claimed-by": "Claimed by",
       "includes": "Includes",
       "territory-of": "Territory of",
       "also-claimed-by": "also claimed by",
