formatting udpates and ensure custom regions location selector tab is never selected when not in custom regions

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -131,7 +131,8 @@
       "toggle-sidebar": "Toggle sidebar"
     },
     "map-sidebar-main-panel": {
-      "change-location": "Change Location",
+      "change-location": "Change location",
+      "change-location-edit-custom-region": "Change location or edit custom region",
       "global-view": "Global view",
       "search-country-region": "Search Country or Region",
       "search-country": "Search Country",
