enable edit layer name

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -214,7 +214,8 @@
       "terrestrial-data": "Terrestrial Data",
       "loading": "Loading data...",
       "no-data-available": "No data available",
-      "delete-layer": "Delete {layer} layer"
+      "delete-layer": "Delete {layer} layer",
+      "edit-layer-name": "Edit Layer Name"
     },
     "map": {
       "loading": "Loading...",
