Add custom display layers in conservation builder (#427)
* init file upload flow

* appeasing the linter

* adds and updates logic for file uploads

* adds and updates logic for file uploads

* add layer upload controls

* tinkering with buttons

* add custom layer group component

* add custom layer group component

* gate add custom layer group and gate its appearance by conservation builder and feature flag

* gate add custom layer group and gate its appearance by conservation builder and feature flag

* use declarative deckJsonLayer component fopr custom layers

* enable toggling of custom layers

* combine all layers into allActiveLayers atom and build that depending on map type

* use mapTypes enum when setting page props

* adds support for toggling layer visibility and moving layers up and down the stack

* enable delete cutom layers

* enable delete cutom layers

* enable edit layer name

* make upload layer focusable

* styling, translations, and acessbility fixes

* use randomuuid to generate custom layer id

* allow uplaoding just geojson feature

* linting

* make layername editable by clicking on it

* limit max file size

* styling edits

* fix bad import and version bump

* clean up

* styling fixes

* move all alyer syncing logic to sync all layers hook

* add localazy in to deploy ci/cd

* update allactive layer sync logic to be less sensitive to custom layer changes and to better presever layer order

---------

Co-authored-by: Will <williamlytle@Williams-MacBook-Pro.local>

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -1,10 +1,4 @@
 {
-  "upload": {
-    "generic-error": "Unable to validate the file.",
-    "xml-syntax-error": "This .kml/.kmz file does not have a valid XML syntax. Please try to validate it and resolve the issues.",
-    "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and eventually .prj files all at once.",
-    "unsupported-file-error": "Unable to parse the file. Please try uploading a different format."
-  },
   "layouts": {
     "error": {
       "go-to-homepage": "Go to homepage"
@@ -213,7 +207,16 @@
       "marine-data": "Marine Data",
       "terrestrial-data": "Terrestrial Data",
       "loading": "Loading data...",
-      "no-data-available": "No data available"
+      "no-data-available": "No data available",
+      "delete-layer": "Delete layer",
+      "edit-layer-name": "Edit Layer Name",
+      "upload-layer": "Upload Layer",
+      "generic-upload-error": "Unable to validate the file.",
+      "xml-syntax-error": "This .kml/.kmz file does not have a valid XML syntax. Please try to validate it and resolve the issues.",
+      "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and eventually .prj files all at once.",
+      "unsupported-file-error": "Unable to parse the file. Please try uploading a different format.",
+      "file-too-large-error": "This file is too large. Maximum file size is {size}"
+
     },
     "map": {
       "loading": "Loading...",
