--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -362,7 +362,8 @@
       "xml-syntax-error": "This .kml/.kmz file does not have a valid XML syntax. Please try to validate it and resolve the issues.",
       "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and, optionally, .prj files all at once.",
       "unsupported-file-error": "Unable to parse the file. Please try uploading a different format.",
-      "file-too-large-error": "This file is too large. Maximum file size is {size}"
+      "file-too-large-error": "This file is too large. Maximum file size is {size}",
+      "no-polygons-error": "File must contain at least one polygon or multipolygon"
     }
   }
 }
