--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -363,7 +363,8 @@
       "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and, optionally, .prj files all at once.",
       "unsupported-file-error": "Unable to parse the file. Please try uploading a different format.",
       "file-too-large-error": "This file is too large. Maximum file size is {size}",
-      "no-polygons-error": "File must contain at least one polygon or multipolygon"
+      "no-polygons-error": "File must contain at least one polygon or multipolygon",
+      "features-excluded-info": "One or more features were excluded because they were not polygons or were invalid polygons."
     }
   }
 }
