--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -154,8 +154,8 @@
       "custom-area-description": "Activate more layers for additional contextual information about your custom area conservation scenario.",
       "start-drawing-on-map": "Start drawing on the map",
       "draw-shape": "Draw a shape",
-      "upload-shape": "Upload shape",
-      "upload-new-shape": "Upload new shape",
+      "upload-shape": "Upload a shape",
+      "upload-new-shape": "Upload a new shape",
       "uploading-shape-to-map": "Uploading shape to map...",
       "loading-data": "Loading data...",
       "clear-shape": "Clear shape",
