add functionality to use custom layer for stats generation

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -214,6 +214,7 @@
       "no-data-available": "No data available",
       "delete-layer": "Delete layer",
       "edit-layer-name": "Edit Layer Name",
+      "use-layer-for-modelling": "Use layer for modelling",
       "upload-layer": "Upload Layer"
     },
     "map": {
