--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -236,7 +236,11 @@
       "move-up": "Move up",
       "move-down": "Move down",
       "change-opacity": "Change opacity",
+      "change-layer-style": "Change layer style",
       "opacity": "Opacity",
+      "fill-color": "Fill color",
+      "line-color": "Line color",
+      "color-option": "Select {color}",
       "hide": "Hide",
       "show": "Show",
       "remove": "Remove",
