--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -154,6 +154,10 @@
       "custom-area-description": "Activate more layers for additional contextual information about your custom area conservation scenario.",
       "start-drawing-on-map": "Start drawing on the map",
       "draw-shape": "Draw a shape",
+      "upload-shape": "Upload a shape",
+      "upload-new-shape": "Upload a new shape",
+      "uploading-shape-to-map": "Uploading shape to map...",
+      "loading-data": "Loading data...",
       "clear-shape": "Clear shape",
       "re-draw": "Re-draw",
       "how-to-draw": "<b>How to draw a custom area</b> on the map, using the drawing functionality?",
@@ -210,13 +214,8 @@
       "no-data-available": "No data available",
       "delete-layer": "Delete layer",
       "edit-layer-name": "Edit Layer Name",
-      "upload-layer": "Upload Layer",
-      "generic-upload-error": "Unable to validate the file.",
-      "xml-syntax-error": "This .kml/.kmz file does not have a valid XML syntax. Please try to validate it and resolve the issues.",
-      "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and eventually .prj files all at once.",
-      "unsupported-file-error": "Unable to parse the file. Please try uploading a different format.",
-      "file-too-large-error": "This file is too large. Maximum file size is {size}"
-
+      "use-layer-for-modelling": "Use layer for modelling",
+      "upload-layer": "Upload Layer"
     },
     "map": {
       "loading": "Loading...",
@@ -310,9 +309,9 @@
     },
     "widget": {
       "updated-on": "Updated on {date}",
-      "loading-data": "Loading data...",
       "no-data-available": "No data available",
-      "not-visible-due-to-error": "The current widget is not visible due to an error"
+      "not-visible-due-to-error": "The current widget is not visible due to an error",
+      "invalid-geometry": "Invalid geometry. The uploaded shape likely contains an intersection."
     },
     "chart-conservation": {
       "year-value": "Year: {value}",
@@ -358,6 +357,17 @@
       "spanish": "Spanish",
       "french": "French",
       "portuguese": "Portuguese"
+    }
+  },
+  "services": {
+    "uploads": {
+      "generic-upload-error": "Unable to validate the file.",
+      "xml-syntax-error": "This .kml/.kmz file does not have a valid XML syntax. Please try to validate it and resolve the issues.",
+      "shp-missing-files-error": "To upload a Shapefile geometry, you must upload the .shp, .shx, .dbf and, optionally, .prj files all at once.",
+      "unsupported-file-error": "Unable to parse the file. Please try uploading a different format.",
+      "file-too-large-error": "This file is too large. Maximum file size is {size}",
+      "no-polygons-error": "File must contain at least one polygon or multipolygon",
+      "features-excluded-info": "One or more features were excluded because they were not polygons."
     }
   }
 }
