--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -214,6 +214,7 @@
       "no-data-available": "No data available",
       "delete-layer": "Delete layer",
       "save-layer": "Save layer",
+      "layer-saved": "Layer saved",
       "edit-layer-name": "Edit Layer Name",
       "use-layer-for-modelling": "Use layer for modelling",
       "upload-layer": "Upload Layer"
