move indexdb interactions to client side hook and add error handling for missing indexed

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -215,6 +215,7 @@
       "delete-layer": "Delete layer",
       "save-layer": "Save layer",
       "layer-saved": "Layer saved",
+      "save-layer-unavailable": "Save layer is not available at this time",
       "edit-layer-name": "Edit Layer Name",
       "use-layer-for-modelling": "Use layer for modelling",
       "upload-layer": "Upload Layer"
