--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -213,9 +213,11 @@
       "loading": "Loading data...",
       "no-data-available": "No data available",
       "delete-layer": "Delete layer",
+      "delete-layer-error": "Unable to delete layer right now.",
       "save-layer": "Save layer",
       "layer-saved": "Layer saved",
       "save-layer-unavailable": "Save layer is not available at this time",
+      "save-layer-error": "Unable to save layer right now.",
       "edit-layer-name": "Edit Layer Name",
       "use-layer-for-modelling": "Use layer for modelling",
       "upload-layer": "Upload Layer"
