TECH-3376: Add Custom Layer Styling (#432)
* add upload gemoetry for stats generation functionality

* update uploade layer to allow reuploading the same file back-toback

* move file upload error handling to a shared hook

* add error for uplaoded shape not containing polygons

* add validation for valid polygons and valid topology

* message user when features are removed from shape upload

* show loading status while preprocessing upload shape

* move topology validation to API

* linting

* hide upload layer feature behind FF

* add zoom to layer on upload

* linting

* add functionality to use custom layer for stats generation

* version bump

* clean up

* init styling of custom layers

* linting

* simplify styling panel to be just color

* linting

* remove destructuring of bbox in setstate call

* update styling colors and accessibility improvements

---------

Co-authored-by: Will <williamlytle@Williams-MacBook-Pro.local>

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -234,12 +234,33 @@
       "legend": "Legend",
       "open-layers-to-add-to-map": "Open <b>Layers</b> to add layers to the map",
       "move-up": "Move up",
+      "move-up-layer": "Move {layer} up",
       "move-down": "Move down",
+      "move-down-layer": "Move {layer} down",
       "change-opacity": "Change opacity",
+      "change-opacity-layer": "Change opacity for {layer}",
+      "change-layer-style": "Change layer style",
+      "change-layer-style-layer": "Change style for {layer}",
+      "color": "Color",
+      "color-layer": "Color options for {layer}",
       "opacity": "Opacity",
+      "opacity-layer": "Opacity for {layer}",
+      "fill-color": "Fill color",
+      "line-color": "Line color",
+      "change-color": "Change {layer} color to {color}",
+      "layer-style-color-options": {
+        "soft-blue": "soft blue",
+        "soft-green": "soft green",
+        "soft-lime": "soft lime",
+        "muted-red": "muted red",
+        "muted-pink": "muted pink"
+      },
       "hide": "Hide",
+      "hide-layer": "Hide {layer}",
       "show": "Show",
+      "show-layer": "Show {layer}",
       "remove": "Remove",
+      "remove-layer": "Remove {layer}",
       "close": "Close",
       "environmental-conservation-national-regional-levels": "Environmental Conservation at National and Regional Levels",
       "environmental-conservation-location": "Environmental Conservation for '{location'}",
