add editing tool tip and make cursor a pencil on custom layer name hover

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -218,6 +218,7 @@
       "layer-saved": "Layer saved",
       "save-layer-unavailable": "Save layer is not available at this time",
       "save-layer-error": "Unable to save layer right now.",
+      "edit": "Edit",
       "edit-layer-name": "Edit Layer Name",
       "use-layer-for-modelling": "Use layer for modelling",
       "upload-layer": "Upload Layer"
