TECH-3411: Custom Layer Styling and UX Updates (#434)
* add upload gemoetry for stats generation functionality

* update uploade layer to allow reuploading the same file back-toback

* move file upload error handling to a shared hook

* add error for uplaoded shape not containing polygons

* add validation for valid polygons and valid topology

* message user when features are removed from shape upload

* show loading status while preprocessing upload shape

* move topology validation to API

* linting

* hide upload layer feature behind FF

* add zoom to layer on upload

* linting

* add functionality to use custom layer for stats generation

* version bump

* clean up

* init styling of custom layers

* linting

* simplify styling panel to be just color

* linting

* remove destructuring of bbox in setstate call

* update styling colors and accessibility improvements

* add dexiedb and wire up save layer button

* dissable save button for saved an dunchanged layers

* move indexdb interactions to client side hook and add error handling for missing indexed

* linting

* impliment error handling ofr layer persistent activities

* move logic to sync custom layers with indexedDB to synallLayers hook

* linting:

* version bump

* refactor

* add refactored custom layer componenets

* linting

* flesh out comment a bit more

* move layer name editing logic into customlayeritem component

* add editing tool tip and make cursor a pencil on custom layer name hover

* linting

* make new custom layers cycle through availalbe colors when added

* move custom layer styles to its own constants file

* open modelling panel when a layer is used for modelling

* remove image from first drawing stesp instructions

* add info tooltip for custom layer upload

* use default env layers based on tabs in CB

---------

Co-authored-by: Will <williamlytle@Williams-MacBook-Pro.local>

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -218,9 +218,12 @@
       "layer-saved": "Layer saved",
       "save-layer-unavailable": "Save layer is not available at this time",
       "save-layer-error": "Unable to save layer right now.",
+      "edit": "Edit",
       "edit-layer-name": "Edit Layer Name",
       "use-layer-for-modelling": "Use layer for modelling",
-      "upload-layer": "Upload Layer"
+      "layer-used-in-modelling": "Layer used in modelling",
+      "upload-layer": "Upload Layer",
+      "upload-directions": "Upload a vector map file to display your own data on the map. Supported formats: GeoJSON (.geojson), KML (.kml), KMZ (.kmz), or Shapefile (.shp). If uploading a Shapefile, include all required components: .shp, .shx, and .dbf (the .prj file is optional but recommended). Maximum file size: 5 MB."
     },
     "map": {
       "loading": "Loading...",
